# OSTIS-NUMSYS

./: .pydevproject  index.html  ogre.cfg  plugins.cfg  readme.txt  resources.cfg  start.bat  start.py
components/: __init__.py  console.py
components/.svn/: all-wcprops  entries
components/LUI/: keynodes.py  lui_init.py
components/LUI_voice_output/: keynodes.py  sc2voice.py  vo_init.py
components/audio/: __init__.py
components/chemistry/: chem2sc.py  chem_editor.py  chem_env.py  chem_init.py  chem_keynodes.py  chem_viewer.py
components/common/: __init__.py  menu.py  menu_cmds.py
components/flash/: flash_init.py
components/graph/: __init__.py  graph_editor.py
components/image/: image_init.py  image_viewer.py
components/map/: map2sc.py  map_viewer.py
components/math/: __init__.py
components/panels/: __init__.py
components/questions/: questions_init.py  questions_pool.py
components/scg/: __init__.py
components/space/: sc2space.py  space_env.py  space_init.py  space_objects.py  space_panel.py  space_viewer.py  space_window.py
components/text/: text_editor.py  text_init.py  text_viewer.py
components/video/: video_init.py
docs/.svn/: entries
make_exe/.svn/: entries
media/.svn/: all-wcprops  entries
media/backs/: backs.material
media/mygui/: black_skin.xml  core.xml  theme_black.txt  theme_black_font.xml
media_src/.svn/: all-wcprops  entries
operations/: __init__.py
repo/: build.rules  log.txt  start.bat
sc-core/examples/ext_dynmod/: CMakeLists.txt
sc-core/examples/wave_find_path/: CMakeLists.txt  wave_find_path.cpp
(+1112 files in other folders)
